# done-it-again

./: .gitignore  analyze.py  analyze_test.py  cli.py  mypy.ini  pyproject.toml  pytest.ini  stats.py
_data/: stats.csv  stats_best_cps.csv  stats_daily.csv  stats_freq_tags.csv  stats_worst_cps.csv
docs/: index.html
docs/_data/: stats.csv  stats_best_cps.csv  stats_daily.csv  stats_freq_tags.csv  stats_worst_cps.csv  tag_defs.yaml
